--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.4.0",
+    "@types/pdfjs-dist": "^2.10.377",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -20,7 +21,9 @@
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.468.0",
+    "mammoth": "^1.9.0",
     "maplibre-gl": "^4.7.1",
+    "pdf-lib": "^1.17.1",
     "print-js": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
