--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,14 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "@pmndrs/assets": "^1.7.0",
+    "@pmndrs/branding": "^0.0.8",
+    "@react-three/drei": "^9.120.5",
+    "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.5",
     "@reduxjs/toolkit": "^2.4.0",
     "@types/pdfjs-dist": "^2.10.377",
+    "@types/three": "^0.171.0",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
@@ -25,6 +31,7 @@
     "maplibre-gl": "^4.7.1",
     "pdf-lib": "^1.17.1",
     "print-js": "^1.6.0",
+    "random-words": "^2.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
@@ -35,9 +42,11 @@
     "react-router-dom": "^6.28.0",
     "react-type-animation": "^3.2.0",
     "redux-persist": "^6.0.0",
+    "sheryjs": "^1.0.0-beta.0.1.8",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
