--- a/backend/package.json
+++ b/backend/package.json
@@ -10,12 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@truffle/hdwallet-provider": "^2.1.15",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.4.6",
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.4",
     "express": "^4.21.1",
     "express-fileupload": "^1.5.1",
