landing page and redirecting page added

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.1",
+    "@gsap/react": "^2.1.2",
     "@pmndrs/assets": "^1.7.0",
     "@pmndrs/branding": "^0.0.8",
-    "@react-three/drei": "^9.120.5",
-    "@react-three/fiber": "^8.17.10",
-    "@react-three/postprocessing": "^2.16.5",
+    "@react-three/drei": "^9.121.4",
+    "@react-three/fiber": "^8.17.14",
+    "@react-three/postprocessing": "^2.19.1",
     "@reduxjs/toolkit": "^2.4.0",
     "@types/pdfjs-dist": "^2.10.377",
     "@types/three": "^0.171.0",
@@ -23,7 +23,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "gsap": "^3.12.5",
+    "gsap": "^3.12.7",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.468.0",
@@ -41,12 +41,13 @@
     "react-router": "^6.28.0",
     "react-router-dom": "^6.28.0",
     "react-type-animation": "^3.2.0",
+    "react-vanilla-tilt": "^1.0.0",
     "redux-persist": "^6.0.0",
     "sheryjs": "^1.0.0-beta.0.1.8",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.172.0"
+    "three": "^0.148.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
